# polarkivet

./: .gitignore  README.md  build.ps1  build.sh  index.html  package-lock.json  package.json
.claude/: CLAUDE.md
.claude/commands/: commit-push.md
.claude/plans/: architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  scanner.rs  thumbs.rs
src/components/: ImageCard.tsx  ImageGrid.tsx  Lightbox.tsx  ScanProgress.tsx  SearchBar.tsx  Settings.tsx  Welcome.tsx
src/hooks/: useImages.ts  useSearch.ts
